--- a/travel/Podfile
+++ b/travel/Podfile
@@ -5,6 +5,7 @@ target 'travel' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
   pod 'Toast-Swift', '~> 5.0.0'
+  pod 'IHKeyboardAvoiding'
   # Pods for travel
 
 end
