Adicionado modelo de estudantes no coredata e método para exibir a opção de escolher uma foto da galeria, ou usar a câmera caso o dispositivo esteja habilitado para isso.

--- a/schedule/Podfile
+++ b/schedule/Podfile
@@ -6,6 +6,7 @@ target 'schedule' do
   use_frameworks!
 
   # Pods for schedule
+  pod 'Toast-Swift', '~> 5.0.0'
 
   target 'scheduleTests' do
     inherit! :search_paths
